# src/modules/lesson/lesson.route.js
@@ -1,5 +1,6 @@
 import express from 'express';
 import * as lessonController from './lesson.controller.js';
+import * as sessionController from '../session/session.controller.js';
 import { lessonValidation } from './lesson.validation.js';
 import validate from '../../middleware/validate.middleware.js';
 import authMiddleware from '../../middleware/auth.middlewere.js';
@@ -9,6 +10,7 @@ const router = express.Router();
 
 router.get('/',
     // #swagger.tags = ['Lesson']
+    authMiddleware,
     lessonController.getAllLessons);
 
 router.post('/',
@@ -20,9 +22,32 @@ router.post('/',
     lessonController.createLesson
 );
 
+router.get('/getlessonbymentor',
+    // #swagger.tags = ['Lesson']
+    authMiddleware,
+    mentorMiddleware(),
+    lessonController.getlessonbymentor
+);
+
+router.get('/getlesson',
+    // #swagger.tags = ['Lesson']
+    authMiddleware,
+    mentorMiddleware(),
+    lessonController.getlessonbymentor
+);
+
+router.get('/getlessonassigntostudent',
+    // #swagger.tags = ['Lesson']
+    authMiddleware,
+    lessonController.getlessonassigntostudent
+);
 router.get('/:id',
     // #swagger.tags = ['Lesson']
     lessonController.getLessonById);
+
+router.get('/:id/sessions',
+    // #swagger.tags = ['Lesson']
+    sessionController.getSessionsByLesson);
 
 router.put('/:id',
     // #swagger.tags = ['Lesson']
@@ -39,5 +64,6 @@ router.delete('/:id',
     mentorMiddleware(),
     lessonController.deleteLesson
 );
+
 
 export default router;
