# src/modules/student/student.controller.js
@@ -1,14 +1,16 @@
+
 import * as studentService from "./student.service.js";
 
 const registerStudent = async (req, res, next) => {
     try {
-        const { firstName, lastName, dateOfBirth, gender, mentorId, notes } = req.body;
+        const { firstName, lastName, email, password, dateOfBirth, gender, mentorId, notes } = req.body;
         const parentId = req.user.id; // From authMiddleware
         const studentimage = req.file?.path;
-
         const result = await studentService.registerStudent({
             firstName,
             lastName,
+            email,
+            password,
             dateOfBirth,
             gender,
             parentId,
@@ -20,6 +22,26 @@ const registerStudent = async (req, res, next) => {
         res.status(201).json({
             success: true,
             message: "Student registered successfully",
+            data: result,
+        });
+    } catch (error) {
+        next(error);
+    }
+};
+
+const studentLogin = async (req, res, next) => {
+    try {
+        const { email, password } = req.body;
+        const result = await studentService.studentLogin(email, password);
+        res.cookie("token", result.token, {
+            httpOnly: true,
+            secure: process.env.NODE_ENV === 'production',
+            sameSite: process.env.NODE_ENV === 'production' ? 'strict' : 'lax',
+            maxAge: 24 * 60 * 60 * 1000,
+        });
+        res.status(200).json({
+            success: true,
+            message: "Student logged in successfully",
             data: result,
         });
     } catch (error) {
@@ -40,4 +62,32 @@ const getAllStudents = async (req, res, next) => {
     }
 };
 
-export { registerStudent, getAllStudents };
+
+
+const getstudentbyparent = async (req, res, next) => {
+    try {
+        const result = await studentService.getstudentbyparent(req.user.id);
+        res.status(200).json({
+            success: true,
+            message: "Students fetched successfully",
+            data: result,
+        });
+    } catch (error) {
+        next(error);
+    }
+};
+
+const getstudentbymentor = async (req, res, next) => {
+    try {
+        const result = await studentService.getstudentbymentor(req.user.id);
+        res.status(200).json({
+            success: true,
+            message: "Students fetched successfully",
+            data: result,
+        });
+    } catch (error) {
+        next(error);
+    }
+};
+
+export { registerStudent, getAllStudents, studentLogin, getstudentbyparent, getstudentbymentor };
