# src/routes/api.routes.js
@@ -3,6 +3,7 @@ import studentRoutes from '../modules/student/student.routes.js';
 import mentorRoutes from '../modules/mentor/mentor.routes.js';
 import parentRoutes from '../modules/parent/parent.routes.js';
 import lessonRoutes from '../modules/lesson/lesson.route.js';
+import sessionRoutes from '../modules/session/session.routes.js';
 
 const router = express.Router();
 
@@ -17,5 +18,8 @@ router.use('/parents', parentRoutes);
 
 /* #swagger.tags = ['Lesson'] */
 router.use('/lessons', lessonRoutes);
+
+/* #swagger.tags = ['Session'] */
+router.use('/sessions', sessionRoutes);
 
 export default router;
